# black-noir

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
_buildlog/: 01_autonomy_inventory.md  DEVIATIONS.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  core.py  governor.py  ideas.py  memory.py  modules.py  selfimprove.py  tasks.py  visual.py  ws.py
backend/app/autonomy/: policy.yaml
backend/app/bot/: morning_report.py  run.py
backend/app/core/: adopt_catalog.py  adoption.py  agent.py  budget.py  builder.py  claude.py  claude_code.py  core_ai.py  council.py  governor.py  ideas.py  intake.py  integrators.py  mediator.py  memory.py  module_factory.py  modules_runtime.py  night.py  profiler.py  providers.py  realimprove.py  runner.py  self_analysis.py  selfimprove.py  telegram.py  tools.py  webauth.py
backend/app/db/: schema.sql  session.py
backend/tests/: test_core.py
core/config/: llm_layer.yaml
deploy/: Caddyfile  noir-bot.service  noir-core.service  noir-improve.service  noir-improve.timer  noir-morning-report.service  noir-morning-report.timer  noir-night.service  noir-night.timer  noir-scout.service  noir-scout.timer
desktop/: CHAT_MEDIATOR.md  package-lock.json  package.json  verify_hud.py  vite.config.ts
desktop/desktop_reference/: hud_reference.html
desktop/src/: index.html  main.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
eval/: runner.py  scorers.py
eval/cases/: bot.yaml  chat.yaml  core.yaml  governor.yaml  improve.yaml  improve_uptime.yaml  memory.yaml  modules.yaml  perception.yaml  profile.yaml  selfimprove.yaml
modules/: base.py  factory.py  registry.py
scripts/: dev_server.sh
(+26 files in other folders)
