[project]
name = "noir-core"
version = "0.1.0"
description = "Black Noir core — personal autonomous AI assistant (FastAPI + Uvicorn)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
# Heavy ML deps loaded lazily at runtime; kept optional so CI/pytest stays light.
memory = ["chromadb>=0.5", "sentence-transformers>=3.0"]
voice = ["faster-whisper>=1.0", "piper-tts>=1.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]
all = ["chromadb>=0.5", "sentence-transformers>=3.0", "faster-whisper>=1.0", "piper-tts>=1.2"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
